--- a/attach-button.component.html
+++ b/attach-button.component.html
@@ -1,98 +1,27 @@
-<div class="maindiv">
-    <div class="container cont1">
-        <div class="row rowi1">
-            <div class="col colm1"><mat-label class="lab"><strong>Profile Code</strong><br></mat-label>
-                <div class="box1"></div>
-            </div>
-            <div class="col colm2"><mat-label class="lab"><strong>Customer Name</strong><br></mat-label>
-                <div class="box2"></div>
-            </div>
-        </div>
-    </div>
-    <div class="container cont2">
-        <div class="row rowi2">
-            <div class="col colm3"><mat-label class="lab"><strong>Business Unit</strong><br></mat-label>
-                <div class="box1"></div>
-            </div>
-            <div class="col colm4"><mat-label class="lab"><strong>Customer Reference</strong><br></mat-label>
-                <div class="box2"></div>
-            </div>
-        </div>
-    </div>
-    <div class="container cont3">
-        <div class="row rowi3">
-            <div class="col colm5"><mat-label class="lab"><strong>Base Configuration</strong><br></mat-label>
-                <div class="box1"></div>
-            </div>
-            <div class="col colm6"><mat-label class="lab"><strong>Agreement Number</strong><br></mat-label>
-                <div class="box2"></div>
-            </div>
-        </div>
-    </div>
-</div>
+<mat-tab-group animationDuration="0ms"  style="margin-top: 500px; margin-left:70px;">
+    <mat-tab label="Settlement" class="mat-tab">Settlement</mat-tab>
+    <mat-tab label="Pricing" class="mat-tab">Pricing</mat-tab>
+    <mat-tab label="Card Processing" class="mat-tab">Card Processing</mat-tab>
+  </mat-tab-group>
 
 
 
+.mat-tab-label-active{
+        background-color:white ;
+        color:black;
+        opacity: 1 !important;
+        font-size: larger;
+      }
+    .mat-tab-label{
+      font-size: xx-large;
+    }
+    .mat-tab-labels{
+      background: black;
+      color: white
 
+    width: 58%;
+    border-bottom: #eb480c36;
+    /* border-radius: 35px; */
+    }
 
-
-.maindiv{
-    margin-top: 93px;
-}
-.cont1{
-    margin-left: 100px;
-}
-.cont2{
-    margin-top: -123px; margin-left: 100px;
-}
-.cont3{
-    margin-top: -119px; margin-left: 100px;
-}
-.rowi1{
-    height: 135px;width: 1025px;margin-top: 125px;
-}
-.rowi2{
-    height: 135px;width: 1025px;margin-top: 125px;
-}
-.rowi3{
-    height: 135px;width: 1025px;margin-top: 125px;
-}
-.colm1{
-    height: 118px;width: 360px;max-width: 426px;margin-left: 30px;margin-right: 0px;
-}
-.colm2{
-    height: 117px;max-width: 435px;margin-left: 122px;
-}
-.colm3{
-    height: 118px;width: 360px;max-width: 426px;margin-left: 30px;margin-right: 0px;
-}
-.colm4{
-    height: 117px;max-width: 435px;margin-left: 122px;
-}
-.colm5{
-    height: 118px;width: 461px;max-width: 426px;margin-left: 30px;margin-right: 0px;
-}
-.colm6{
-    height: 117px;max-width: 435px;margin-left: 122px;
-}
-.lab{
-    margin-top: 74px;
-}
-
-.box1{
-    background-color: #474747;
-    width: 214px;
-    height: 46px;
-    margin-left: 192px;
-    margin-top: -44px;
-}
-.box2{
-    background-color: #474747;
-    width: 214px;
-    height: 46px;
-    margin-left: 200px;
-    margin-top: -44px;
-}
-
-
-
+    
